# ai_assistant

./: .env.template  .gitignore  Dockerfile  README.md  gunicorn_conf.py  pyproject.toml
alembic/: env.py
alembic/versions/: 167f16351997_llm_message.py  465cc321cb6e_first_migration.py
app/: main.py
app/api/: routers.py
app/api/endpoints/: __init__.py  health.py  llm.py  user.py
app/core/: base.py  config.py  db.py  enums.py
app/core/auth/: backend.py  manager.py  users.py
app/core/auth/dependencies/: db.py  manager.py
app/core/docs/: llm.py
app/core/logs/: config.py  logs.py
app/core/middleware/: cors.py  global_.py
app/crud/: base.py  msg.py
app/models/: __init__.py  msg.py  user.py
app/schemas/: llm.py  user.py
app/services/: llm.py
scripts/: start.sh  start_with_migration.sh
tests/api/endpoints/: test_llm.py
