[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.127.1",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.10",
    "sqlalchemy>=2.0.45",
]
